# easy-rust-crud

./: Cargo.toml
resources/migrations/: V1__init.sql
src/: lib.rs  main.rs
src/app/: app.rs
src/controller/: controller.rs  model.rs
src/datasource/: datasource.rs  migrations.rs  mod.rs
