[package]
name = "easy-rust-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
actix-web = "4.2.1"
env_logger = "0.10.0"
derive_more = { version = "0.99.17", features = ["error"] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.1.2" , features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}