[package]
name = "easy-rust-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"

envy = "0.4.1"
tokio = "1.24.1"
actix-web = "4.2.1"

serde = { version = "1.0.152", features = ["derive"] }
derive_more = { version = "0.99.17", features = ["error"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

refinery = { version = "0.8.7", features = ["tokio-postgres"] }
deadpool-postgres = { version = "0.10.3", features = ["rt_tokio_1", "serde"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-0_8", "with-serde_json-1"] }
